samples/_failures_safe/1761349112_05a0e3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b8ba2b7c.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_b8ba2b7c.c:152:13: error: expected expression at end of input
  152 |             case TOKEN_IDENTIFIER: type_str =
      |             ^~~~
./samples/SAFE/__tmp_b8ba2b7c.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b8ba2b7c.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b8ba2b7c.c:152:13: error: expected declaration or statement at end of input
